--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -1050,3 +1050,30 @@ abstract = { Abstract In this article we describe and investigate tiled shading.
     booktitle = {Workshop on Vision, Modelling, and Visualization VMV '06},
     pages = {169--176}
 }
+
+@inproceedings{Laine:2011:SoftwareRasterization,
+ author = {Laine, Samuli and Karras, Tero},
+ title = {High-performance Software Rasterization on GPUs},
+ booktitle = {Proceedings of the ACM SIGGRAPH Symposium on High Performance Graphics},
+ series = {HPG '11},
+ year = {2011},
+ isbn = {978-1-4503-0896-0},
+ location = {Vancouver, British Columbia, Canada},
+ pages = {79--88},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2018323.2018337},
+ doi = {10.1145/2018323.2018337},
+ acmid = {2018337},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
+@misc{Harris:2007:ParallelReduction,
+  title={Optimizing parallel reduction in CUDA},
+  author={Harris, Mark},
+  journal={NVIDIA Developer Technology},
+  volume={2},
+  number={4},
+  year={2007},
+  publisher={NVIDIA Corp. California}
+}
