--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -32,9 +32,10 @@
 
 % Thesis development
 
-\usepackage{cgsnotes}
+
 \usepackage{cgsparagraphclassification}
 
+\usepackage[colorinlistoftodos]{todonotes}
 \usepackage{outlines}
 \usepackage{enumitem}
 \usepackage{cleveref}
