--- a/foo-thesis.bib
+++ b/foo-thesis.bib
@@ -1077,3 +1077,17 @@ abstract = { Abstract In this article we describe and investigate tiled shading.
   year={2007},
   publisher={NVIDIA Corp. California}
 }
+
+@article{Cigolle:2014:NormalPacking,
+   author  = {Zina H. Cigolle and Sam Donow and Daniel Evangelakos and Michael Mara and Morgan McGuire and Quirin Meyer},
+   title   = {A Survey of Efficient Representations for Independent Unit Vectors},
+   year    = {2014},
+   month   = {April},
+   day     = {17},
+   journal = {Journal of Computer Graphics Techniques (JCGT)},
+   volume  = {3},
+   number  = {2},
+   pages   = {1--30},
+   url     = {http://jcgt.org/published/0003/02/01/},
+   issn    = {2331-7418}
+}
