--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -39,6 +39,7 @@
 \usepackage{outlines}
 \usepackage{enumitem}
 \usepackage{cleveref}
+\usepackage{tabulary}
 \setlist{itemsep=2pt,parsep=2pt}
 
 % Title page
