--- a/chap-results.tex
+++ b/chap-results.tex
@@ -10,14 +10,16 @@ This chapter details the performance and quality characteristics of the implemen
 
 The implementation is tested in the Crytek Sponza and San Miguel scene, with 260k and 7.9M triangles respectively, both provided by \citet{McGuire2011Data}.
 
+% no antialiasing but SSAO?
+
 Unless otherwise noted, the parameters used for the measurements and screenshots are:
 \begin{outline}
-    \1 1920x1080px output resolution
+    \1 1920x1080\,px output resolution
     \1 1024 VPLs
-    \1 2048px² ISM texture, i.\,e.\ 64px² per ISM
+    \1 2048\,px² ISM texture, i.\,e.\ 64\,px² per ISM
     \1 Single-pixel point renderer enabled, 16 VPLs considered per point, up to 4 collected
     \1 4x4 interleaving pattern
-    \1 Clustered shading: 128px² tile size, 16 depth slices
+    \1 Clustered shading: 128\,px² tile size, 16 depth slices
 \end{outline}
 
 \noindent
@@ -52,16 +54,47 @@ The hardware specification of the testing system is as follows:
 
 \subsection{Point Rendering with Splatting}
 
-\Cref{fig:???} shows the Crytek Sponza scene rendered using ISMs created by the splat renderer (a) and the single-pixel renderer (b). A section of the ISM texture is shown for each renderer in the lower row.
+
+
+
+%\Cref{fig:???} shows the Crytek Sponza scene rendered using ISMs created by the splat renderer (a) and the single-pixel renderer (b). A section of the ISM texture is shown for each renderer in the lower row.
 
 
 \subsubsection{Quality}
 
-What becomes apparent is that renderer x does z while renderer y preserves w. Also note the darkening by renderer x, y does not do that.
+\begin{figure}[htb]
+\centering
+  \begin{tabular}{@{}cc@{}}
+    \includegraphics[width=.48\textwidth]{screenshots/ism_splat_cropped} &
+    \includegraphics[width=.48\textwidth]{screenshots/ism_single_pixel_cropped}
+  \end{tabular}
+  \caption{ISMs rendered using the splat renderer (left) and single-pixel renderer (right) with default settings. The single-pixel renderer performs interpolation between points, uses more points and doesn't let points ``bleed'' into neighboring ISMs, but takes more time.}
+  \label{fig:results:isms}
+\end{figure}
+
+\Cref{fig:results:isms} shows a few ISMs rendered with the splat and single-pixel renderer. The imperfections do show, and not only through the low resolutions. The distortion of the surface silhouettes by the splat renderer or postprocessing contribute their part, making it hard to identify which part of the Crytek Sponza is shown.
+
+\begin{figure}[htb]
+\centering
+  \begin{tabular}{@{}cc@{}}
+    \includegraphics[width=.48\textwidth]{screenshots/darkening_splat} &
+    \includegraphics[width=.48\textwidth]{screenshots/darkening_single_pixel}
+  \end{tabular}
+  \caption{A view of the Crytek Sponza scene using ISMs rendered with the splat renderer (left) and single-pixel renderer (right). Note the severe darkening of the splat renderer. Also note that there is no skylight rendered, which leads to an unnaturally dark upper part in the image even for the single-pixel renderer.}
+  \label{fig:results:ismDarkening}
+\end{figure}
+
+Comparing the screenshots in \cref{fig:results:ismDarkening}, it becomes apparent that the splat renderer causes visible darkening in the upper part of the image. The reason is likely that the point splats are always oriented towards the camera and do not take the point's normal into account when rendering, amplifying the usual aliasing artifacts of common shadow maps. As a result, any point size larger than one pixel causes surfaces that are not directly facing the camera appear nearer than they actually are when doing shadow lookups in the ISMs. A larger shadow bias could compensate for that but would introduce heavier light leaking. Another possibility would be to use the normal to calculate a point's depth per fragment at a potentially high performance cost.
+
+As the single-pixel renderer does not use splats, it does not have this problem. One could say it performs the per-fragment depth calculation implicitly during interpolation in the postprocessing phase.
 
 Screenshots when enlarging the points / making them smaller. Discuss.
 
 Screenshots when doing more points. either by tessellation or by collecting more. Discuss.
+
+Screenshots of failure case, behind the right curtains
+
+Screenshot of shadow bias behind left curtains
 
 \todo[color=yellow]{count point for splat renderer and output them somehow.}
 
@@ -74,9 +107,26 @@ for single-pixel-renderer: maybe show one full-size shadowmap to show this *can*
 
 \subsubsection{Performance}
 
-In the screenshots above, x needs z ms, while y needs w ms. Since the technique implements no adaptivity, these numbers are independent from the viewport and (largely) from the VPL placement.
+\begin{table}[h]
+\begin{center}
+    \begin{tabulary}{0.98\textwidth}{| L | L | L | L |}
+        \hline
+        Splat Default Settings & Single-Pixel Default Settings & Splat with Single-Pixel Settings & Single-Pixel with Splat Settings \\ \hline
+        3.4\,ms & 7.5\,ms & 38\,ms & 5.2\,ms \\
+        \hline
+    \end{tabulary}
+    \caption{Timings of the ISM renderers with different settings.}
+    \label{tab:results:ism_timings}
+\end{center}
+\end{table}
 
-Numbers when the VPLs are somewhere else. but, should not happen with more intelligent VPL sampling.
+\Cref{tab:results:ism_timings} shows the time needed for rendering the ISMs with both renderers and different settings.
+
+Note that the comparison between the two renderers with default settings is not a fair one, since the single-pixel renderer uses more points and performs clamping per default. If the splat renderer is changed to behave similarly, it takes one additional millisecond for the clamping, and 33 additional milliseconds for using the same technique to collect VPLs as the single-pixel renderer does. The reason for this heavy slowdown is likely that the single-pixel renderer uses shared memory to load the 16 VPLs once, whereas the splatting renderer has to load all 16 VPLs per invocation, since the fragment shader does not provide access to shared memory.
+
+Conversely, if the single-pixel renderer does not perform clamping, the push phase needs 0.3\,ms less (2.4\,ms to 2.1\,ms), and when it considers only one VPL per point, the compute shader renderer uses 2.0\,ms less (2.9\,ms to 0.9\,ms).
+
+Since the technique implements no adaptivity, these numbers are independent from the viewport. They are however slightly affected by VPL placement, since it influences culling. In a second scenario, where the sunlight shines directly from above, all VPLs are placed on the floor facing up. As a result, much fewer points are culled during ISM rendering, resulting in slightly higher timings. The splat renderer needed an additional 0.7\,ms, whereas the single-pixel renderer needed only 0.2\,ms more.
 
 Numbers when enlarging the points / making them smaller. Discuss. Note how the single-pixel renderer is (hopefully) not affected by point size.
 
@@ -85,18 +135,40 @@ Numbers when doing more points. either by tessellation or by collecting more. Di
 
 \subsubsection{Detailed Performance Measurements for the Single-Pixel Point Renderer}
 
-Split time into point collection, point rendering, postprocessing
+
+\begin{table}[h]
+\begin{center}
+    \begin{tabulary}{0.98\textwidth}{| L | L | L | L || L |}
+        \hline
+        Point Collection & Point Rendering & Pull Phase & Push Phase & Total\\ \hline
+        2.1\,ms & 3.0\,ms & 1.0\,ms & 2.4\,ms & 7.5\,ms\\
+        \hline
+    \end{tabulary}
+    \caption{Timing breakdown of the single-pixel point renderer.}
+    \label{tab:results:timing_breakdown_single_pixel}
+\end{center}
+\end{table}
+
+\Cref{tab:results:timing_breakdown_single_pixel} gives more detailed performance measurements of the single-pixel renderer.
 
 Impact of packing
 
+more details on the individual phases?
+
 show this is bandwidth bound. calculation how much memory is read and written, vs bandwidth of GTX 980.
+    - roughly 110MB read and written, that's 1.2ms.
+    - 16MB of that unnecessarily because of the 2nd layer of input texture
+    - By parallel reduction juju reduced by 22MB or 0.2ms.
+    - with more juju, maybe brought down to actually that time, except for the arithmetic stuff of course...
 
 
 \subsubsection{Memory Usage}
 
-Point splat renderer uses just the ISM.
+The point splat renderer uses no more memory than the ISM itself requires, which is 8\,MB for a 2048\,px² 16-bit depth buffer.
 
-Single-pixel renderer uses point buffer, mipmaps, additional render targets.
+The single-pixel renderer uses additional memory. First, it uses a buffer for storing the points. This is implemented as four-channel 32-bit float texture, with the first three channels containing the position, and the last channel the radius (8 bit) and normal (24 bit, see \cite{Cigolle:2014:NormalPacking}). With a maximum point count of 2048 per ISM (keep in mind they are rendered into multiple ISMs later), this buffer uses 32\,MB.
+The additional textures used are the render target of the single-pixel renderer (single-channel 2048x2048x2\,px, 32-bit integer, uses 32\,MB), the mipmap levels used by the pull-push algorithm (two channels, 32-bit, use approx. 11\,MB) and the final ISM (same as used by the splat renderer, uses 8MB).
+Added together, the single-pixel renderer uses a total of 83\,MB, likely with room for optimization left.
 
 
 \subsubsection{Problems with High Geometric Density}
